@@ -203,9 +203,15 @@ pam_sm_acct_mgmt(pam_handle_t *pamh, int flags,
 			retval = PAM_AUTHINFO_UNAVAIL;
 			break;
 		case KRB5KDC_ERR_CLIENT_REVOKED:
-			notice("account checks fail for '%s': "
-			       "account is locked", user);
-			retval = PAM_USER_UNKNOWN;
+			if (options->ignore_unknown_principals) {
+				notice("account checks fail for '%s': "
+				       "account is locked (ignoring)", user);
+				retval = PAM_IGNORE;
+			} else {
+				notice("account checks fail for '%s': "
+				       "account is locked", user);
+				retval = PAM_USER_UNKNOWN;
+			}
 			break;
 		default:
 			notice("account checks fail for '%s': "
